# mdo-core

./: .gitattributes  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  debug_script.wat
.github/workflows/: build_check.yaml
cli/: main.c
cmake/: Findlibuv.cmake  mondradiko-vcpkg.cmake  prelude.cmake  vcpkg.sh.in
cmake/vcpkg-ports/cglm/: CONTROL  portfile.cmake
cmake/vcpkg-ports/flecs/: CONTROL  portfile.cmake
cmake/vcpkg-ports/mondradiko-deps/: vcpkg.json
cmake/vcpkg-ports/wavm/: CONTROL  portfile.cmake
docs/: architecture.md  ecs.md  style_guide.md
include/: export.h  mdo-log.h
include/displays/: display.h
include/displays/openxr/: openxr_display.h
include/displays/sdl/: sdl_display.h
include/gpu/: gpu_device.h  gpu_shader.h  gpu_vector.h  vk_config.h
include/network/: network_client.h  network_server.h
include/renderer/: camera.h  frame_data.h  render_phases.h  renderer.h  viewport.h  viewport_uniform.h
include/renderer/debug/: debug_draw.h  debug_frame_data.h  debug_pass.h
include/scripting/: debug_script.h
include/world/: world.h
lib/: CMakeLists.txt  SDL2.exp  SDL2d.lib  SDL2main.lib  SDL2maind.lib  jsoncpp.lib  mdo-core.lib  openxr_loader.lib  uv.lib
lib/Flecs/BUILD_Flecs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  flecs-config.cmake  flecs.sln  flecs.vcxproj  flecs_static.vcxproj  flecs_static.vcxproj.filters  install_manifest.txt
lib/Flecs/BUILD_Flecs/Release/: flecs.exp  flecs.lib  flecs_static.lib
lib/Flecs/BUILD_Flecs/flecs.dir/Release/: flecs.dll.recipe
lib/Flecs/BUILD_Flecs/flecs.dir/Release/flecs.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  flecs.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/Flecs/BUILD_Flecs/flecs_static.dir/Release/: flecs_static.lib.recipe
lib/Flecs/BUILD_Flecs/flecs_static.dir/Release/flecs_static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/Flecs/BUILD_Flecs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
lib/Flecs/BUILD_Flecs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
lib/Flecs/BUILD_Flecs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
shaders/: CMakeLists.txt  debug.frag  debug.vert
src/: log-win32.c  log.c  mdo-log.c
src/displays/openxr/: openxr_display.c
src/displays/sdl/: sdl_display.c
src/gpu/: gpu_device.c  gpu_shader.c  gpu_vector.c
src/network/: network_client.c  network_server.c  udp_send.c
src/renderer/: camera.c  renderer.c  viewport.c
src/renderer/debug/: debug_draw.c  debug_pass.c
src/scripting/: debug_script.c
src/world/: world.c
